Be sure to close the temporary PS file before sending it to lpr, so it is all flushed.

BUG: 160860

svn path=/trunk/KDE/kdegraphics/okular/; revision=849949